REF: changed nav href for location.html, from Location.html to location.html  #DONE

--- a/nav.html
+++ b/nav.html
@@ -14,7 +14,7 @@
       <a href="packMenu.html" target="content">Package Menu</a>   
       <a href="menu.html" target="content">Menu</a>
       <a href="order.html" target="content">Online Order</a>
-      <a href="Location.html" target="content">Location</a>
+      <a href="location.html" target="content">Location</a>
     </nav>
   </div>
 </body>
